some changes (ICCOPT...)

--- a/i_events.html
+++ b/i_events.html
@@ -34,17 +34,20 @@
           co-organizing: <br>
           <br>
           <h2> Upcoming Events: </h2>
-          <br>
-          <p><a href="http://www.siam.org/meetings/op20/"><span
-                style="font-weight: bold;">SIAM Conference on
-                Optimization</span></a>, The Hong Kong Polytechnic
-            University, Hong Kong, May 26-29, 2020.<br>
-            I am a member of the organizing committee.<br>
+          <h1>SIAM Conference on Optimization 2020, Hong Kong <br>
+          </h1>
+          <p>I am on the scientific committee of the next <a
+              href="http://www.siam.org/meetings/op20/">SIAM Conference
+              on Optimization</a>, which is to take place at the Hong
+            Kong Polytechnic University, Hong Kong, during May 26-29,
+            2020. As a member of this committee, I am jointly
+            responsible for the invitation of plenary and tutorial
+            speakers.<br>
           </p>
-          <br>
-          <br>
-          <p><span style="font-weight: bold;">Sparse Approximation and
-              Sampling</span>, The Alan Turing Institute, London,
+          <h1>Sparse Approximation and Sampling, The Alan Turing
+            Institute<br>
+          </h1>
+          <p>Location and Date: The Alan Turing Institute, London,
             May/June 2019.&nbsp; <br>
           </p>
           <ul>
@@ -66,8 +69,10 @@
 
 
 
+
                 Calderbank</a> (Duke, USA), <a
                 href="http://www.damtp.cam.ac.uk/research/afha/anders/">Anders
+
 
 
 
@@ -87,6 +92,7 @@
 
 
 
+
                 Calderbank</a> (Duke, USA), <a
                 href="https://statweb.stanford.edu/%7Ecandes/">Emmanuel
                 Candes</a> (Stanford, USA), <a
@@ -97,19 +103,19 @@
 
 
 
+
                 Daubechies</a> (Duke, USA), <a
 href="http://www.damtp.cam.ac.uk/user/ai/Arieh_Iserles/Arieh_Iserles.html">Arieh
 
 
 
 
+
                 Iserles</a> (Cambridge, UK)</li>
           </ul>
-          <br>
-          <p><a href="https://ismp2018.sciencesconf.org"><span
-                style="font-weight: bold;">ISMP 2018</span></a>,
+          <h1><a href="https://ismp2018.sciencesconf.org">ISMP 2018</a>,
             Bordeaux, France, July 1-6, 2018. <br>
-          </p>
+          </h1>
           <p>I am co-organizing the stream <span style="font-style:
               italic;">4.a Learning: Machine Learning, Big Data, Cloud
               Computing, and Huge-Scale Optimization. </span><span
@@ -122,20 +128,24 @@ href="http://www.damtp.cam.ac.uk/user/ai/Arieh_Iserles/Arieh_Iserles.html">Arieh
 
 
 
+
               Sra</a>.&nbsp;</p>
           <p>If you want to a propose a session within this stream, get
             in touch.<br>
+            <br>
           </p>
           <h2> Past Events: </h2>
-          <p><a href="https://obd.kaust.edu.sa/"><b><strong></strong></b></a><b><strong><a
-                  href="https://obd.kaust.edu.sa">Optimization and Big
-                  Data 2018</a></strong></b>, <a
-              href="https://www.kaust.edu.sa/en">KAUST</a>, Thuwal,
-            Saudi Arabia, February 5-8, 2018. <br>
+          <h1>Optimization and Big Data 2018<br>
+          </h1>
+          <p><a href="https://obd.kaust.edu.sa/"><b><strong></strong></b></a><a
+              href="https://obd.kaust.edu.sa">Optimization and Big Data
+              2018</a>, <a href="https://www.kaust.edu.sa/en">KAUST</a>,
+            Thuwal, Saudi Arabia, February 5-8, 2018. <br>
             I am co-organzing this workshop with <a
               href="https://mcanini.github.io/">Marco Canini</a>. Past
             editions of the event were held in Edinburgh, Scotland: <a
 href="http://www.maths.ed.ac.uk/%7Eprichtar/Optimization_and_Big_Data_2015/">OBD
+
 
 
 
@@ -146,8 +156,10 @@ href="http://www.maths.ed.ac.uk/%7Eprichtar/Optimization_and_Big_Data_2015/">OBD
 
 
 
+
               2013,</a> <a
 href="http://www.maths.ed.ac.uk/%7Eprichtar/Advances_in_Large_Scale_Optimization/index.html">OBD
+
 
 
 
@@ -156,23 +168,18 @@ href="http://www.maths.ed.ac.uk/%7Eprichtar/Advances_in_Large_Scale_Optimization
             Sponsored Research, and co-funded by the <a
               href="https://www.turing.ac.uk/">Alan Turing Institute</a>.<br>
             <b><strong></strong></b></p>
-          <p><b><strong><a
-href="http://www.ima.org.uk/conferences/conferences_calendar/5th_ima_conference_on_numerical_linear_algebra_and_optimisation.cfm.html"><br>
-                </a></strong></b></p>
-          <p><b><strong><a
+          <h1>IMA Numerical Linear Algebra and Optimization</h1>
+          <p><strong></strong><a
 href="http://www.ima.org.uk/conferences/conferences_calendar/5th_ima_conference_on_numerical_linear_algebra_and_optimisation.cfm.html">IMA
 Numerical
 
 
 
 
-                  Linear Algebra and Optimization</a>, </strong> </b>Birmingham,
-September
 
-
-
-
-            7-9, 2016 (co-organizing 2 mini-symposia)<br>
+              Linear Algebra and Optimization</a><strong></strong><b><strong>,
+              </strong> </b>Birmingham,
+            September 7-9, 2016 (co-organizing 2 mini-symposia)<br>
             <br>
           </p>
           <p><b><a href="http://www.iotbd.org/">International Conference
@@ -183,6 +190,7 @@ September
           <p><strong><a
                 href="http://icms.org.uk/workshop.php?id=391#programme">Mathematical
 Perspectives
+
 
 
 
@@ -204,6 +212,7 @@ and
 
 
 
+
                 Computational Approaches to Large Scale Inverse Problems</a>,
             </strong> Alan Turing Institute Scoping Workshop, Edinburgh,
             December 2-4, 2015<br>
@@ -212,6 +221,7 @@ and
           <p> <strong> <a
                 href="http://www.icms.org.uk/workshop.php?id=367">Distributed
 Machine
+
 
 
 
@@ -292,6 +302,7 @@ and
 
 
 
+
                 Big Data 2015,</a></strong> Edinburgh, May 6-8, 2015 </p>
           <ul>
             <li>Keynote speaker: <a
@@ -301,11 +312,13 @@ Nemirovski
 
 
 
+
               </a> (Georgia Institute of Technology) </li>
             <br>
             <li> Following the success of two previous workshops which I
               established in 2012 and organized in <a
 href="http://www.maths.ed.ac.uk/%7Eprichtar/Advances_in_Large_Scale_Optimization/index.html">2012
+
 
 
 
@@ -324,6 +337,7 @@ BASP
 
 
 
+
                 Frontiers Workshop 2015,</a> </strong>
             Villars-sur-Ollon, Switzerland, January 25-30, 2015 </p>
           <ul>
@@ -334,6 +348,7 @@ BASP
             <br>
             <li> Speakers: <a
                 href="http://iew3.technion.ac.il/Home/Users/becka.html">Amir
+
 
 
 
@@ -354,6 +369,7 @@ Schoenlieb
 
 
 
+
               </a> (Cambridge). </li>
             <li><br>
             </li>
@@ -361,6 +377,7 @@ Schoenlieb
           <p> <strong><a
                 href="http://www.maths.ed.ac.uk/%7Eprichtar/NAIS2014/">Workshop:
 Numerical
+
 
 
 
@@ -376,6 +393,7 @@ Numerical
           <p> <strong><a
 href="http://www.ima.org.uk/conferences/conferences_calendar/4th_ima_conference_on_numerical_linear_algebra_and_optimisation.cfm.html">IMA
 Numerical
+
 
 
 
@@ -413,6 +431,7 @@ Conference
 
 
 
+
                 on Optimization</a></strong>, San Diego, California, May
             19-22, 2014 </p>
           <ul>
@@ -426,6 +445,7 @@ href="http://www.maths.ed.ac.uk/%7Eprichtar/docs/Coordinate_Descent_Methods_SIOP
 
 
 
+
                 programme</a> </li>
             <br>
             <li> Speakers: <a
@@ -434,9 +454,11 @@ href="http://www.maths.ed.ac.uk/%7Eprichtar/docs/Coordinate_Descent_Methods_SIOP
 
 
 
+
                 Beck</a> (Technion), <a
                 href="http://www.cs.cmu.edu/%7Ejkbradle/">Joseph Bradley</a>
               (Berkeley), <a href="http://www.stanford.edu/%7Eachould/">Alexandra
+
 
 
 
@@ -451,9 +473,11 @@ href="http://research.microsoft.com/en-us/people/mdudik/">Miro Dudik</a>
 
 
 
+
                 Tat-Lee</a> (MIT), <a
                 href="http://www.csie.ntu.edu.tw/%7Ecjlin/">Chih-Jen Lin</a>
               (NTU), <a href="http://people.math.sfu.ca/%7Ezhaosong/">Zhaosong
+
 
 
 
@@ -462,6 +486,7 @@ href="http://research.microsoft.com/en-us/people/mdudik/">Miro Dudik</a>
                 href="http://www.ece.umn.edu/%7Eluozq/">Tom Luo</a>
               (Minnesota), <a
                 href="http://scholar.google.com/citations?user=DJ8Ep8YAAAAJ&amp;hl=en">Yurii
+
 
 
 
@@ -476,8 +501,10 @@ href="http://research.microsoft.com/en-us/people/mdudik/">Miro Dudik</a>
 
 
 
+
                 Tappenden</a> (Edinburgh), <a
                 href="http://coral.ie.lehigh.edu/%7Exiaocheng/">Xiaocheng
+
 
 
 
@@ -492,6 +519,7 @@ href="http://research.microsoft.com/en-us/people/mdudik/">Miro Dudik</a>
 
 
 
+
                 Xiao</a> (Microsoft), <a
                 href="http://stat.rutgers.edu/home/tzhang/">Tong Zhang</a>
               (Rutgers), <a href="http://mat.uc.pt/%7Ezhang/">Zaikun
@@ -501,6 +529,7 @@ href="http://research.microsoft.com/en-us/people/mdudik/">Miro Dudik</a>
           </ul>
           <p> <strong><a href="http://eventos.fct.unl.pt/iccopt2013">4th
 International
+
 
 
 
@@ -520,6 +549,7 @@ and
 
 
 
+
                 Big Data</a></strong>, Edinburgh, May 1-3, 2013</p>
           <ul>
             <li> I am the organizer of this workshop. </li>
@@ -530,8 +560,10 @@ Shalev-Shwartz
 
 
 
+
               </a> (Jerusalem), <a
                 href="http://ljk.imag.fr/membres/Anatoli.Iouditski/">Anatoli
+
 
 
 
@@ -552,7 +584,9 @@ Shalev-Shwartz
 
 
 
+
               <a href="http://www.cmap.polytechnique.fr/%7Ejaggi/">Martin
+
 
 
 
@@ -564,8 +598,10 @@ Shalev-Shwartz
 
 
 
+
               <a
                 href="http://www.strath.ac.uk/mathstat/staff/professordeshigham/">Des
+
 
 
 
@@ -593,6 +629,7 @@ href="https://informs.emeetingsonline.com/emeetings/formbuilder/clustersessiondt
           <p> <strong><a
 href="http://www.ima.org.uk/conferences/conferences_calendar/numerical_linear_algebra_and_optimisation.cfm">3rd
 IMA
+
 
 
 
@@ -630,6 +667,7 @@ in
 
 
 
+
                 Large-Scale Optimization</a></strong>, Edinburgh, May
             24–25, 2012 </p>
           <ul>
@@ -649,6 +687,7 @@ Biennial
 
 
 
+
                 Conference on Numerical Analysis</a></strong>, June
             28–July 1, 2011 </p>
           <ul>
@@ -660,12 +699,14 @@ Biennial
 
 
 
+
                 1</a>:<em>"Optimization and Applications".</em> <br>
               Speakers: Olivier Devolder (Louvain-la-Neuve), Martin
               Takac (Edinburgh), Michal Kocvara (Birmingham)</li>
             <br>
             <li><a
                 href="http://www.mathstat.strath.ac.uk/naconf/minisymposia">Minisymposium
+
 
 
 
