teaching - added some external courses

--- a/i_teaching.html
+++ b/i_teaching.html
@@ -32,17 +32,75 @@
       <div id="wrapper" class="main">
         <div id="content">
           <h2>KAUST</h2>
-          <br>
           CS 394D, Contemporary Topics in Machine Learning (Spring 2018,
           <a
             href="https://www.piazza.com/kaust.edu.sa/spring2019/cs394d">Spring
+2019
 
 
 
 
 
-            2019 - Piazza</a>)<br>
+
+
+
+            - Piazza</a>)<br>
+          <br>
           CS 390FF, Big Data Optimization (Fall 2017, Fall 2018)<br>
+          <br>
+          <h2>External (Summer/Winter Doctoral Schools)<br>
+          </h2>
+          <a
+            href="https://iccopt2019.berlin/index.php?page=summerschool">ICCOPT
+
+
+
+
+
+
+
+            2019 Summer School</a>, Berin, Germany, August 2019,<b> <br>
+            "A Guided Walk Through the ZOO of Stochastic Gradient
+            Descent Methods"</b> (6 hours)<b> <br>
+          </b> <a href="talks/ZOO_course_ICCOPT2019.pdf">main slides</a>,
+          extra slides on <a
+            href="talks/ZOO_course_ICCOPT2019-SGD-SR.pdf">SGD-SR</a> and
+          <a href="talks/ZOO_course_ICCOPT2019-SEGA.pdf">SEGA</a><br>
+          <br>
+          <a href="http://www.ds3-datascience-polytechnique.fr/">Data
+            Science Summer School,</a> CMAP, École Polytechnique, Paris,
+          France, August 2017 <br>
+          <b>"Randomized Optimization Methods"</b> (5 hours)<br>
+          <a href="talks/RandOpt-DS3.pdf">slides</a>, lecture videos: <a
+href="https://comm.medias.polytechnique.fr/videos/richtarik_1_randonopti/">1</a>
+          <a
+href="https://comm.medias.polytechnique.fr/videos/richtarik_2_randonopti/">2</a>
+          <a
+href="https://comm.medias.polytechnique.fr/videos/richtarik_3_randonopti_08033/">3</a>
+          <a
+href="https://comm.medias.polytechnique.fr/videos/richtarik_4_randonoptimization/">4</a>
+          <a
+href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization/">5</a><br>
+          <br>
+          <a href="http://sites.uclouvain.be/socn/">Graduate School in
+            Systems, Optimization, Control and Networks (SOCN)</a>,
+          Université catholique de Louvain, Belgium, Fall 2015 <br>
+          <b> "Randomized Algorithms for Big Data Optimization" </b>
+          (21 hours)<br>
+          <a href="http://sites.uclouvain.be/socn/Courses/Courses2015-2">slides</a><br>
+          <br>
+          <a href="http://www.irit.fr/cimi-machine-learning/">Machine
+            Learning Thematic Trimester</a>, Toulouse, France, September
+          2015, <b>"Optimization in Machine Learning"</b>, <a
+            href="http://www.irit.fr/cimi-machine-learning/node/1">slides</a><br>
+          <br>
+          <a
+            href="http://lear.inrialpes.fr/people/harchaoui/projects/khronos/">Khronos-Persyval
+
+
+            Days on High-Dimensional Learning and Optimization</a>,
+          Grenoble, France, June 2014, <b>"Randomized Coordinate
+            Descent for Big Data Optimization"</b> (6 hours), slides<br>
           <br>
           <h2>Edinburgh </h2>
           <a href="http://www.drps.ed.ac.uk/15-16/dpt/cxmath11146.htm">Modern
@@ -55,11 +113,25 @@ Optimization
 
 
 
+
+
+
+
+
+
+
+
+
+
             Methods for Big Data Problems</a> (Spring 2016, Spring 2017)<br>
+          <br>
           Game Theory (Fall 2010, 2011, 2012)<br>
+          <br>
           Discrete Programming and Game Theory (Fall 2010, 2011, 2012)<br>
+          <br>
           Optimization Methods in Finance (Spring 2012, 2013, 2014,
           2015)<br>
+          <br>
           Deterministic Optimization Methods in Finance (Spring 2011,
           2012, 2013, 2014, 2015) <br>
         </div>
