changes goden bear

--- a/i_teaching.html
+++ b/i_teaching.html
@@ -44,14 +44,16 @@
 
 
 
+
             - Piazza</a>)<br>
           <br>
           CS 390FF, Big Data Optimization (Fall 2017, Fall 2018)<br>
           <br>
-          <h2>External (Summer/Winter Doctoral Schools)<br>
+          <h2>External (Summer / Winter Doctoral Schools)<br>
           </h2>
           <a
             href="https://iccopt2019.berlin/index.php?page=summerschool">ICCOPT
+
 
 
 
@@ -87,15 +89,15 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
           Université catholique de Louvain, Belgium, Fall 2015 <br>
           <b> "Randomized Algorithms for Big Data Optimization" </b>
           (21 hours)<br>
-          <a href="http://sites.uclouvain.be/socn/Courses/Courses2015-2">slides</a><br>
+          slides<br>
           <br>
           <a href="http://www.irit.fr/cimi-machine-learning/">Machine
             Learning Thematic Trimester</a>, Toulouse, France, September
-          2015, <b>"Optimization in Machine Learning"</b>, <a
-            href="http://www.irit.fr/cimi-machine-learning/node/1">slides</a><br>
+          2015, <b>"Optimization in Machine Learning"</b>, slides<br>
           <br>
           <a
             href="http://lear.inrialpes.fr/people/harchaoui/projects/khronos/">Khronos-Persyval
+
 
 
             Days on High-Dimensional Learning and Optimization</a>,
@@ -105,6 +107,7 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
           <h2>Edinburgh </h2>
           <a href="http://www.drps.ed.ac.uk/15-16/dpt/cxmath11146.htm">Modern
 Optimization
+
 
 
 
