--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <ul>
             <li><a href="https://qianxunk.github.io">Xun Qian</a></li>
             <li>paper <a href="http://proceedings.mlr.press/v97/qian19b.html">"SGD: General Analysis and Improved Rates"</a>, ICML 2019</li>
-            <li>[<a href="file:///Users/richtap/Documents/WORK/GitHub/My%20GitHub%20Pages%20website/talks/TALK-SGD-AS.pdf">slides</a>]</li>
+            <li>[<a href="talks/TALK-SGD-AS.pdf">slides</a>]</li>
           </ul>
           <ul>
             <li><a href="https://www.maths.ed.ac.uk/%7Es1461357/">Nicolas Loizou</a><br></li>
@@ -59,6 +59,7 @@
           <ul>
             <li><a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a><br></li>
             <li>paper <a href="https://arxiv.org/abs/1905.11373">"Revisiting Stochastic Extragradient"</a></li>
+            <li>[<a href="https://www.dmitry-kovalev.com/posts/iccopt_2019/iccopt.pdf">slides</a>]<br></li>
             <li><br></li>
             <li><a href="https://elnurgasanov.tilda.ws">Elnur Gasanov</a></li>
             <li><br></li>
@@ -72,7 +73,7 @@
           <ul>
             <li><a href="https://richtarik.org">Peter Richtárik</a></li>
             <li>paper <a href="https://papers.nips.cc/paper/7478-sega-variance-reduction-via-gradient-sketching">"SEGA: Variance Reduction via Gradient Sketching"</a> - NeurIPS 2018</li>
-            <li>[slides]</li>
+            <li>[<a href="talks/TALK-SEGA-ICCOPT2019.pdf">slides</a>]</li>
             <li><br></li>
           </ul>
           <br>
