--- a/i_teaching.html
+++ b/i_teaching.html
@@ -45,14 +45,18 @@
 
 
 
+
             - Piazza</a>)<br>
           <br>
-          CS 390FF, Big Data Optimization (Fall 2017, Fall 2018)<br>
+          CS 390FF, Big Data Optimization (Fall 2017, Fall 2018, <a
+            href="https://piazza.com/kaust.edu.sa/fall2019/cs390ff/home">Fall
+            2019 - Piazza</a>)<br>
           <br>
           <h2>External (Summer / Winter Doctoral Schools)<br>
           </h2>
           <a
             href="https://iccopt2019.berlin/index.php?page=summerschool">ICCOPT
+
 
 
 
@@ -100,6 +104,7 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
 
 
 
+
             Days on High-Dimensional Learning and Optimization</a>,
           Grenoble, France, June 2014, <b>"Randomized Coordinate
             Descent for Big Data Optimization"</b> (6 hours), slides<br>
@@ -107,6 +112,7 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization
           <h2>Edinburgh </h2>
           <a href="http://www.drps.ed.ac.uk/15-16/dpt/cxmath11146.htm">Modern
 Optimization
+
 
 
 
