--- a/i_team.html
+++ b/i_team.html
@@ -68,7 +68,11 @@
           <h2>MS Students<br>
           </h2>
           <ul>
+            <li>Alyazeed Basyoni (8/2019-present)</li>
+            <li>Slavomír Hanzely (8/2019-present)<br>
+            </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -92,6 +96,7 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
 
 
@@ -143,10 +148,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -186,10 +193,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -225,10 +234,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -269,10 +280,12 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+
 
 
                 Hanzely</a> (Comenius University), 1/2018-2/2018<br>
@@ -297,12 +310,14 @@
 
 
 
+
                 Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry
+
 
                 Kamzolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
@@ -328,11 +343,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -386,6 +403,7 @@
 
 
 
+
                 Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
             </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
@@ -401,6 +419,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -468,6 +487,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -499,6 +519,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -506,6 +527,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -559,6 +581,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -568,6 +591,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -629,6 +653,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>6/2019)</li>
             <li>thesis: Randomized iterative methods for linear systems:
@@ -640,6 +665,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -704,6 +730,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Csiba</a> (9/2014<span class="style1" style="width:
                 300px;">–present</span>)</li>
             <li>thesis: Data sampling strategies in stochastic
@@ -736,6 +763,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="https://scholar.google.com/citations?user=hivmUaoAAAAJ&amp;hl=fr">Luca
+
                 Bravi</a> (3/2015<span class="style1" style="width:
                 300px;">–</span>6/2015)</li>
             <li>visiting PhD student from University of Florence, Italy
@@ -745,6 +773,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
 href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
+
 
 
 
@@ -802,9 +831,11 @@ href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minna
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -831,11 +862,13 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
                 href="papers/Papamakarios.pdf">report</a>)</li>
             <li><a
                 href="https://uk.linkedin.com/in/juraj-labant-21865a9b">Juraj
+
                 Labant</a> (2016), Data Scientist at Department of
               Education, United Kingdom<br>
             </li>
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
+
                 Kisiala</a> (2015), <a
                 href="https://arxiv.org/abs/1511.00140">dissertation</a>,
               current position: Credit Model Risk Quant at Royal Bank of
@@ -876,14 +909,17 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
+
                 Banks-Watson</a> (2012), Senior Supply Chain
               Optimization Consultant, Opex Analytics<br>
             </li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -919,6 +955,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
                 Boffin</a> (2011), Data Scientist, Aviva<br>
             </li>
             <li><a href="https://uk.linkedin.com/in/marilena-karanika">Marilena
+
                 Karanika</a> (2010), Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
             <li>Robie King (2010)&nbsp;</li>
@@ -943,8 +980,10 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
 
 
+
                 Peneva</a> (2012, Edinburgh Mathematics), now: Oxford </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
+
 
 
 
@@ -967,10 +1006,12 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
 
 
+
                 @ Chemnitz</a><br>
             </li>
             <li>Edward Cumberlege (2011, Edinburgh Mathematics), now: <a
 href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=264554286&amp;privcapId=214118497&amp;previousCapId=214118497&amp;previousTitle=Sagamore%20Investments">Director
+
 
 
                 @ Sagamore Investments </a><br>
@@ -983,6 +1024,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
 
 
 
@@ -1030,8 +1072,10 @@ D.
 
 
 
+
                 Baes</a> (University of Zurich)</li>
             <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
+
 
 
 
@@ -1078,6 +1122,7 @@ D.
 
 
 
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -1102,8 +1147,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1155,8 +1202,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1182,6 +1231,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1232,9 +1282,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
